# sayacode

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
lib/: __init__.py  __main__.py  _version.py  agent.py  custom_commands.py  i18n.py  state.py  theme.py
lib/api_config/: __init__.py  api_config.py  wizard.py
lib/cli/: __init__.py  configure.py  main.py  parser.py  permissions.py  workspace.py
lib/commands/: __init__.py  base.py  conversation.py  diagnostics.py  hooks.py  mcp.py  mode.py  model.py  permissions.py  preferences.py  router.py  runtime_handlers.py  runtime_info.py  session.py  symbols.py  team.py  tools.py  workspace.py
lib/core/: __init__.py  agent_mailbox.py  agent_runtime.py  audit.py  context.py  doctor.py  (+18 more)
scripts/: check_release.py
tests/: conftest.py  test_agent_mailbox.py  test_agent_turn_state.py  test_api_config_wizard.py  test_architecture_boundaries.py  test_batch_executor.py  test_command_router.py  test_context_packager.py  test_denial_tracker.py  test_doctor.py  test_hooks.py  test_i18n.py  test_launch_config.py  test_mcp_runtime.py  test_model_context_window.py  test_model_profiles.py  test_model_providers.py  test_model_registry.py  test_modes.py  test_paths_audit_support.py  test_permissions.py  test_private_io.py  test_run_wrapper.py  test_runtime_application.py  test_runtime_context_tools.py  test_runtime_sync.py  test_safety.py  test_session_schema.py  test_shell_tools.py  test_spinner_mode.py  test_symbols.py  test_team_config.py  test_theme.py  test_tool_meta.py  test_tool_search.py  test_tools_and_safety.py  test_web_tools.py
(+41 files in other folders)
