[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sayacode"
dynamic = ["version"]
description = "SAYACODE CLI coding assistant"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "SAYACODE Contributors"},
]
keywords = ["coding-agent", "cli", "llm", "developer-tools", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-deepseek>=0.1.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
]

[project.scripts]
sayacode = "lib.cli:main"

[project.urls]
Homepage = "https://github.com/saya-ch/sayacode"
Repository = "https://github.com/saya-ch/sayacode"
Issues = "https://github.com/saya-ch/sayacode/issues"

[tool.setuptools.packages.find]
include = ["lib*"]

[tool.setuptools.dynamic]
version = {attr = "lib._version.__version__"}
